tweak: left-sidebar-header: invisible to stop it from overlaping with mesh info panel

--- a/config/emi.css
+++ b/config/emi.css
@@ -171,7 +171,7 @@
 	/**
 	 * Whether to render the header buttons and page count for the left sidebar
 	 */
-	left-sidebar-header: visible;
+	left-sidebar-header: invisible;
 
 	/**
 	 * Which theme to use for the left sidebar
